--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,14 +4,24 @@
   {% include head.html %}
 
   <body>
-
-    {% include header.html %}
-
-    <div class="page-content">
-        {{ content }}
-    </div>
-
-    {% include footer.html %}
+		<div class="row">
+    	<div class="col s12 m3">
+      	<div class="table cover">
+        	{% include sidebar.html %}
+      	</div>
+    	</div>
+    	<div class="col s12 m9">
+			
+      	{% include header.html %}
+			
+				<div class="post-content">
+        	{{ content }}
+      	</div>
+			
+				{% include footer.html %}
+			
+    	</div>
+  	</div>
 
   </body>
 
