--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
   <body>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <div class="header" style="display:none">
+    <div class="header" style="position: fixed">
 			{% include header.html %}
 		</div>
 
