--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<header class="navigation" style="position: fixed" role="banner">
-  <div class="navigation-wrapper">
+<header class="navigation" role="banner">
+  <div class="navigation-wrapper" style="position: fixed">
     <a href="{{ site.baseurl }}/" class="logo">
       {% if site.logo %}
       <img src="{{ site.logo | prepend: site.baseurl }}" alt="{{ site.title }}">
