--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -100,6 +100,7 @@ pre code.hljs {
 *	Header
 */
 .navigation {
+	position: fixed;
 	box-shadow: 0 2px $highlight-color;
 	padding: 0 1em;
 	margin: 0;
