--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -103,7 +103,6 @@ pre code.hljs {
 	box-shadow: 0 2px $highlight-color;
 	padding: 0 1em;
 	margin: 0;
-	position: absolute;
 	/*
 	*	Navigation Menu - http://refills.bourbon.io/unstyled/ (see "Navigation")
 	*/
@@ -122,7 +121,7 @@ pre code.hljs {
   .navigation-wrapper {
   	@include outer-container;
     @include clearfix;
-    position: relative;
+    position: fixed;
   }
   .logo {
     float: left;
