--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -77,6 +77,7 @@ pre code.hljs {
 		text-shadow: 0 2px 1px rgba(0,0,0,0.67) !important;
 		background-position: 50% 50%;
 		background-size: cover;
+		margin-top: 30px;
 		.title {
 			font-size: modular-scale(6);
 		}
@@ -103,6 +104,9 @@ pre code.hljs {
 	box-shadow: 0 2px $highlight-color;
 	padding: 0 1em;
 	margin: 0;
+	position: fixed;
+	top: 0;
+	width: 100%;
 	/*
 	*	Navigation Menu - http://refills.bourbon.io/unstyled/ (see "Navigation")
 	*/
