--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -77,7 +77,7 @@ pre code.hljs {
 		text-shadow: 0 2px 1px rgba(0,0,0,0.67) !important;
 		background-position: 50% 50%;
 		background-size: cover;
-		margin-top: 60px;
+		margin-top: 4em;
 		.title {
 			font-size: modular-scale(6);
 		}
