--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -72,6 +72,7 @@ pre code.hljs {
 .site-header-container, .post-header-container {
 	width: 100%;
 	text-align: center;
+	margin-top: 4em;
 	&.has-cover {
 		color: $white;
 		text-shadow: 0 2px 1px rgba(0,0,0,0.67) !important;
