--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -330,6 +330,7 @@ pre code.hljs {
 		.post-header {
 			padding: 0.5em 1em 1em 1em;
 			text-align: center;
+			margin-top: 4em;
 		}
 		.posts-list {
 			@extend %default-ul;
