--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,9 +30,11 @@ layout: default
 </section>
 
 <article class="post-content">
-	<script type="text/javascript" async
-  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
-  </script>
+	<script type="text/x-mathjax-config">
+		MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+	</script>
+	<script type="text/javascript" src="http://cdn.mathjax.org/math...">
+	</script>
   {{ content }}
 </article>
 
