--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-
-  {% include head.html %}
-  {% include mathjax_support.html %}
+	
+	<head>
+	  {% include head.html %}
+		{% include mathjax_support.html %}
+	</head>
 
 	<body>
 		
