--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,11 +30,7 @@ layout: default
 </section>
 
 <article class="post-content">
-	<script type="text/x-mathjax-config">
-		MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
-	</script>
-	<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-	</script>
+	{{ content }}
 </article>
 
 {% if site.jekyll-archives %}
