--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
         {{ content }}
     </div>
     {% include footer.html %}
-		{% include Katex.html %}
+		{% include Mathjax.html %}
   </body>
 
 </html>
