--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 	
 	<head>
 	  {% include head.html %}
+		{% include mathjax_support.html %}
 	</head>
 
 	<body>
@@ -11,7 +12,6 @@
         {{ content }}
     </div>
     {% include footer.html %}
-		{% include Mathjax.html %}
-  </body>
+	</body>
 
 </html>
