--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -9,11 +9,11 @@ $sans-serif: -apple-system, BlinkMacSystemFont, "Nanum Gothic", "Roboto", "Segoe
 $monospace: Monaco, Consolas, "Lucida Console", monospace !default;
 
 // Typography
-$base-font-family: "Open Sans", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif; // $helvetica;
-$heading-font-family: "Roboto Slab", "Helvetica Neue", "Helvetica", "Arial", sans-serif; // $base-font-family;
+$base-font-family: "Nanum Gothic", sans-serif; // $helvetica;
+$heading-font-family: "Nanum Gothic", sans-serif; // $base-font-family;
 
 // Font Sizes
-$base-font-size: $em-base; // 16px
+$base-font-size: $em-base; // 18px
 
 // Adjust modular scale ratio
 $modular-scale-ratio: $minor-third;
