--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -9,8 +9,8 @@ $sans-serif: -apple-system, BlinkMacSystemFont, "Nanum Gothic", "Roboto", "Segoe
 $monospace: Monaco, Consolas, "Lucida Console", monospace !default;
 
 // Typography
-$base-font-family: "Nanum Gothic", sans-serif; // $helvetica;
-$heading-font-family: "Nanum Gothic", sans-serif; // $base-font-family;
+$base-font-family: "RIDIBatang", sans-serif; // $helvetica;
+$heading-font-family: "RIDIBatang", sans-serif; // $base-font-family;
 
 // Font Sizes
 $base-font-size: $em-base; // 18px
