--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,6 +1,12 @@
 // Google Fonts
 @import url(//fonts.googleapis.com/css?family=Roboto+Slab:400,700,300|Roboto:400,700,300|Open+Sans:300italic,400italic,600italic,700italic,800italic,400,800,700,600,300);
 @import url(//fonts.googleapis.com/css?family=Nanum+Gothic);
+@font-face {
+    font-family: 'RIDIBatang';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.0/RIDIBatang.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
 // system typefaces
 $serif: Georgia, Times, serif !default;
