--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -22,7 +22,7 @@ $monospace: Monaco, Consolas, "Lucida Console", monospace !default;
 
 // Typography
 $base-font-family: "RIDIBatang", sans-serif; // $helvetica;
-$heading-font-family: "ghanachoco", sans-serif; // $base-font-family;
+$heading-font-family: "RIDIBatang", sans-serif; // $base-font-family;
 
 // Font Sizes
 $base-font-size: $em-base; // 20px
